Fix scrollbar overlaying navbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .App {
   text-align: center;
-  width: 100vw;
   margin: 0 auto;
 }
 
